--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div>
+        <strong>We're sorry but Maison doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong>
+
+        <!-- <div id="root"></div> -->
+    </div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
